--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx-for-tailwind": "^1.0.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
+    "jose": "^5.9.6",
     "next": "15.0.1",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
