--- a/package.json
+++ b/package.json
@@ -13,13 +13,13 @@
   "dependencies": {
     "@libsql/client": "^0.14.0",
     "@tanstack/react-query": "^5.60.5",
-    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "clsx-for-tailwind": "^1.0.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "jose": "^5.9.6",
     "next": "15.0.1",
+    "postgres": "^3.4.5",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-intersection-observer": "^9.13.1",
@@ -27,7 +27,9 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^9.2.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
+    "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.26.2",
