--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   },
   "dependencies": {
     "@libsql/client": "^0.14.0",
+    "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.60.5",
     "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "clsx-for-tailwind": "^1.0.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "jose": "^5.9.6",
+    "lucide-react": "^0.460.0",
     "next": "15.0.1",
     "postgres": "^3.4.5",
     "react": "19.0.0-rc-69d4b800-20241021",
     "react-dom": "19.0.0-rc-69d4b800-20241021",
     "react-intersection-observer": "^9.13.1",
+    "tailwind-merge": "^2.5.4",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
